--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,14 +1,23 @@
 <h1><%= @place["name"] %></h1>
 
+<p>
+  <a href="/posts/new?place_id=<%= @place["id"] %>" class="btn btn-outline-primary">New Post</a>
+</p>
+
 <h2>My Posts</h2>
-<% for post in @posts %>
-  <h3><%= post["title"] %></h3>
-  <h4><%= post["posted_on"] %></h4>
-  <p><%= post["description"] %></p>
-<% end %>
+
+<div class="row row-gap-3">
+  <% for post in @posts %>
+    <div class="col-lg-4 column-gap-2">
+      <h3><%= post["title"] %></h3>
+      <h4><%= post["posted_on"] %></h4>
+      <p><%= post["description"] %></p>
+    </div>
+  <% end %>
+</div>
 
 <p>
-  <a href="/posts/new?place_id=<%= @place["id"] %>">New Post</a>
+  <a href="/places" class="btn btn-outline-primary">Back to All Places</a>
 </p>
 
 <p>
