--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -5,7 +5,11 @@
 </p>
 
 <ul>
+  
   <% for place in @places %>
     <li><a href="/places/<%= place["id"] %>"><%= place["name"] %></a></li>
   <% end %>
+
+
+</div>
 </ul>
